--- a/style/project1.css
+++ b/style/project1.css
@@ -70,41 +70,53 @@ nav a{
     width: 100%;
 }
 /*header section end*/
+/*main section start*/
+.main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+/*Features section start*/
+
 .Features-div{
     display: flex;
-    padding: 80px 240px;
-   
-
+    text-align: center;
+    align-items: center;
+  margin: 20px 240px;
 
 }
 .Features-img{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-  
+    gap:1.5rem;
+    
     
 }
+
 .images{
-width: 100%;
+    width: 180px;
+    
 }
+
 .Features-text{
-
-
+   padding-left: 70px;
+   
 }
 
 .Features-title{
-
+    font-size: 2rem;
 }
+
 .quick{
     color:  #727272;
-    font-size:2.8rem;
     font-weight: 500;
 }
 .Features , .of-our{
     color: #131313;
-    font-size: 2.8rem;
     font-weight: 700;
 }
 .Features{
     color: #FF900E;
 }
+
+
     
