--- a/style/project1.css
+++ b/style/project1.css
@@ -27,7 +27,7 @@ margin: 20px auto;
 }
 /*header section start*/
 header{
-    background-color:rgba(255, 144, 14, 0.10);
+    background-color:#ff900e1a;
     padding: 50px 240px;
 }
 
@@ -119,4 +119,45 @@ nav a{
 }
 
 
+@media screen and (max-width:576px)  {
+    header{
+            padding: 20px;
+    }
+    .nav-arcitect{
+
+        flex-direction: column;
+    }
+    .Features-div{
+        flex-direction: column;
+       
+    }
+    .Features-img{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+        margin-right: 80px;
+        text-align: center;
     
+        
+    }
+    .Features-text{
+        margin-right: 100px;
+        text-align: center;
+    }
+}
+
+
+@media screen and (min-width:577px) and (max-width:960px) {
+    header{
+       padding: 50px;
+    }
+    .nav-arcitect{
+
+        flex-direction: column;
+    }
+    .Features-div{
+        flex-direction: column;
+       
+    }
+}
+        
